--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "theunic/gilded-rose-kata",
     "description": "Port of the Gilded Rose Kata for C# (https://github.com/NotMyself/GildedRose)",
     "require-dev": {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "~5.0"
     },
     "authors": [
         {
@@ -19,8 +19,13 @@
         "bin-dir": "bin/"
     },
     "autoload": {
-        "psr-0": {
-            "": ["src/"]
+        "psr-4": {
+            "": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "": "tests/"
         }
     }
 }
