--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "name": "theunic/gilded-rose-kata",
     "description": "Port of the Gilded Rose Kata for C# (https://github.com/NotMyself/GildedRose)",
+    "require": {
+        "php": ">=7.4"
+    },
     "require-dev": {
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpunit": "^9.4"
     },
     "authors": [
         {
@@ -20,12 +23,12 @@
     },
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "GildedRose\\Console\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "": "tests/"
+            "Tests\\GildedRose\\Console\\": "tests/"
         }
     }
 }
